[sizing-tool]:wrk on heightAdjuster skeleton

--- a/tools/sizing-tool/mock.html
+++ b/tools/sizing-tool/mock.html
@@ -8,9 +8,26 @@
       .menu-btn {
         padding: 1rem;
       }
+      .invisible {
+        display: none;
+      }
+      #save-btn {
+        padding: 1rem;
+      }
+      .selected {
+        background-color: lightpink;
+      }
+      .mock-img {
+        height: 50px;
+        width: 50px;
+      }
     </style>
   </head>
   <body>
+    <div class="mock">
+      <img src="../pics/abcd.png" alt="" class="mock-img" />
+      <p class="mock-p">Lorem, ipsum dolor.</p>
+    </div>
     <script src="./sizing.js"></script>
   </body>
 </html>
