[global]:+ link to wrking on task

--- a/index.html
+++ b/index.html
@@ -502,7 +502,13 @@
         /></a>
       </section>
       <section>
-        <!-- <h2 id="work-in-progress">Dabar daroma...("master" branch)</h2> -->
+        <h2 id="work-in-progress">Dabar daroma...</h2>
+        <a href="./projects/bootstrap/nica-reklama/index.html"
+          ><img
+            class="screenshots"
+            src="./images/bootstrap/nica-reklama.png"
+            alt=""
+        /></a>
       </section>
 
       <!-- wrknow -->
