--- a/projects/graded-asignments/kelioniu-puslapis/index.html
+++ b/projects/graded-asignments/kelioniu-puslapis/index.html
@@ -287,7 +287,97 @@
         </div>
       </div>
     </div>
-
+    <div class="container-full-w">
+      <svg
+        class="deco-rekomend-top"
+        width="348"
+        height="126"
+        viewBox="0 0 348 126"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M98.643 7.62939e-06H0C38.7968 28.0875 84.8684 55.725 128.22 75.6038C243.74 128.504 344.642 136.509 402 114.653V99.2097C374.093 111.264 326.797 111.098 264.473 96.6141C207.991 83.3783 118.229 46.7178 66.2039 14.8564C56.3134 8.84541 59.8891 9.95675 101.792 25.2633C243.678 77.174 351.678 78.7555 345.088 20.8219C344.531 15.9276 341.608 8.66233 337.071 7.62939e-06H317.812C349.823 55.1482 303.319 58.0702 163.658 21.9233C150.447 18.5707 124.441 9.62833 98.643 7.62939e-06Z"
+          fill="url(#paint0_linear_31_143)"
+        />
+        <defs>
+          <linearGradient
+            id="paint0_linear_31_143"
+            x1="202.614"
+            y1="177.03"
+            x2="202.614"
+            y2="-45.1828"
+            gradientUnits="userSpaceOnUse"
+          >
+            <stop stop-color="#00D4E4" />
+            <stop offset="0.78125" stop-color="#1F59EE" />
+          </linearGradient>
+        </defs>
+      </svg>
+      <div class="rekomendacijos">
+        <h2>Rekomenduojamos lankytinos vietos</h2>
+        <div class="thumbs">
+          <div class="img-w-caption">
+            <img src="./pics/uzutrakio.png" alt="" />
+            <h3>Užutrakio dvaras</h3>
+          </div>
+          <div class="img-w-caption">
+            <img src="./pics/ventes-ragas.jpeg" alt="" />
+            <h3>Ventės ragas</h3>
+          </div>
+          <div class="img-w-caption">
+            <img src="./pics/velnio-akmuo.jpeg" alt="" />
+            <h3>Velnio akmuo</h3>
+          </div>
+          <div class="img-w-caption">
+            <img src="./pics/gedimino-pilis.jpeg" alt="" />
+            <h3>gedimino pilis</h3>
+          </div>
+          <div class="img-w-caption">
+            <img src="./pics/kryziu-kalnas.jpeg" alt="" />
+            <h3>Kryžių kalnas</h3>
+          </div>
+          <div class="img-w-caption">
+            <img src="./pics/birstono-apzvalgos.jpeg" alt="" />
+            <h3>Birštono apžvalgos bokštas</h3>
+          </div>
+          <div class="img-w-caption">
+            <img src="./pics/merkines-piramide.jpeg" alt="" />
+            <h3>Merkinės piramidė</h3>
+          </div>
+          <div class="img-w-caption">
+            <img src="./pics/kabantis.jpeg" alt="" />
+            <h3>Kabantis lynų tiltas</h3>
+          </div>
+        </div>
+        <svg
+          class="deco-rekomend-bottom"
+          width="402"
+          height="126"
+          viewBox="0 0 402 126"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M303.357 126H402C363.203 97.9125 317.132 70.275 273.78 50.3962C158.26 -2.50399 57.3584 -10.5086 0 11.347V26.7903C27.9074 14.7356 75.2028 14.902 137.527 29.3859C194.009 42.6217 283.771 79.2822 335.796 111.144C345.687 117.155 342.111 116.043 300.208 100.737C158.322 48.826 50.3219 47.2445 56.9116 105.178C57.4692 110.072 60.3918 117.338 64.9294 126H84.1881C52.1768 70.8518 98.6813 67.9298 238.342 104.077C251.553 107.429 277.559 116.372 303.357 126Z"
+            fill="url(#paint0_linear_31_142)"
+          />
+          <defs>
+            <linearGradient
+              id="paint0_linear_31_142"
+              x1="199.386"
+              y1="-51.0305"
+              x2="199.386"
+              y2="171.183"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop stop-color="#00D4E4" />
+              <stop offset="0.78125" stop-color="#1F59EE" />
+            </linearGradient>
+          </defs>
+        </svg>
+      </div>
+    </div>
     <footer>
       <div class="footer_top">
         <div class="footer_top_left">
