[kelioniu]: +apie responsive

--- a/projects/graded-asignments/kelioniu-puslapis/apie/apie.html
+++ b/projects/graded-asignments/kelioniu-puslapis/apie/apie.html
@@ -10,17 +10,63 @@
   <body>
     <nav>
       <img src="../pics/logo.svg" alt="" />
-      <ul>
+      <ul class="nav-links">
         <li>
-          <a href="../index.html">Pagrindinis</a>
+          <a href="../index.html"> <u>Pagrindinis</u></a>
         </li>
-        <li>
-          <a href="./apie.html"> <u>Apie Mus</u> </a>
-        </li>
+        <li><a href="./apie.html">Apie Mus</a></li>
         <li><a href="../contacts/contacts.html">Kontaktai</a></li>
       </ul>
+      <div class="burger">
+        <svg
+          width="24px"
+          height="24px"
+          viewBox="0 0 24 24"
+          fill="#1b6bed"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M4 6H20M4 12H20M4 18H20"
+            stroke="#1b6bed"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+        <div class="burger-links">
+          <ul>
+            <li>
+              <a href="#"> <u>Pagrindinis</u></a>
+            </li>
+            <li><a href="./apie.html">Apie Mus</a></li>
+            <li><a href="../contacts/contacts.html">Kontaktai</a></li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
+    <div class="hat">
+      <h1>Apie mus</h1>
+    </div>
+
+    <main>
+      <div class="wrap-cite">
+        <cite
+          >Kelionių po Lietuvą portalą kuriame tam, kad kiekvienam iš jūsų
+          padėtume atrasti naujas, įdomias vietas, geriau pažinti Lietuvą ir jos
+          istoriją, pamatyti gražiausias vietas. Norime, kad kuo daugiau žmonių
+          keliones po Lietuvą atrastų kaip įdomų laisvalaikio praleidimo būdą,
+          jomis paįvairintų savo atostogas, savaitgalius ar net ilgesnius
+          vasaros vakarus. Lankytinų vietų žemėlapyje tūkstančiai priežasčių
+          keliauti. Portale sau įdomaus randa ir populiariausių, madingų vietų
+          ieškotojai, ir ieškantys išskirtinių, dar neatrastų vietų. Kelionių
+          maršrutai, patyrusių keliautojų pasakojimai ir jų rekomendacijos
+          išsiruošti į kelionę padeda ir tiems, kurie neturi laiko ar noro
+          kelionę planuoti savarankiškai.</cite
+        >
+        <div class="div-img"></div>
+      </div>
+    </main>
     <footer>
       <div class="footer_top">
         <div class="footer_top_left">
