--- a/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.html
+++ b/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.html
@@ -10,17 +10,39 @@
   <body>
     <nav>
       <img src="../pics/logo.svg" alt="" />
-      <ul>
+      <ul class="nav-links">
         <li>
-          <a href="../index.html">Pagrindinis</a>
+          <a href="../index.html"> <u>Pagrindinis</u></a>
         </li>
-        <li>
-          <a href="../apie/apie.html"> Apie Mus </a>
-        </li>
-        <li>
-          <a href="./contacts.html"><u>Kontaktai</u></a>
-        </li>
+        <li><a href="../apie/apie.html">Apie Mus</a></li>
+        <li><a href="./contacts.html">Kontaktai</a></li>
       </ul>
+      <div class="burger">
+        <svg
+          width="24px"
+          height="24px"
+          viewBox="0 0 24 24"
+          fill="#1b6bed"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M4 6H20M4 12H20M4 18H20"
+            stroke="#1b6bed"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+        </svg>
+        <div class="burger-links">
+          <ul>
+            <li>
+              <a href="#"> <u>Pagrindinis</u></a>
+            </li>
+            <li><a href="..apie/apie.html">Apie Mus</a></li>
+            <li><a href="./contacts.html">Kontaktai</a></li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
     <footer>
