[kelioniu]:contacts page done

--- a/projects/graded-asignments/kelioniu-puslapis/apie/apie.html
+++ b/projects/graded-asignments/kelioniu-puslapis/apie/apie.html
@@ -64,7 +64,21 @@
           išsiruošti į kelionę padeda ir tiems, kurie neturi laiko ar noro
           kelionę planuoti savarankiškai.</cite
         >
-        <div class="div-img"></div>
+        <div class="div-img">
+          <svg
+            class="deco-apie"
+            width="223"
+            height="104"
+            viewBox="0 0 223 104"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M168.28 0H223C201.478 23.1833 175.921 45.9952 151.873 62.4031C87.791 106.067 31.8182 112.674 0 94.6342V83.2403C15.481 93.1902 41.717 91.7 76.2899 79.7449C107.622 68.8202 157.415 38.5607 186.275 12.2624C191.761 7.30097 189.778 8.21826 166.533 20.8522C87.8252 63.6992 27.9149 65.0045 31.5704 17.1863C31.8797 13.1466 33.5009 7.14986 36.0181 0H46.7014C28.9438 45.5191 54.7411 47.931 132.215 18.0954C139.543 15.3282 153.969 7.94718 168.28 0Z"
+              fill="white"
+            />
+          </svg>
+        </div>
       </div>
     </main>
     <footer>
