--- a/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.html
+++ b/projects/graded-asignments/kelioniu-puslapis/contacts/contacts.html
@@ -45,6 +45,162 @@
       </div>
     </nav>
 
+    <div class="hat">
+      <h1>Kontaktai</h1>
+    </div>
+
+    <main>
+      <div class="contact-box">
+        <div class="kontaktai">
+          <h2>Kontaktai</h2>
+          <div class="category-box">
+            <span class="prop">Telefono numeris:</span>
+            <span class="value">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M10.5 18C10.3011 18 10.1103 18.079 9.96967 18.2197C9.82902 18.3603 9.75 18.5511 9.75 18.75C9.75 18.9489 9.82902 19.1397 9.96967 19.2803C10.1103 19.421 10.3011 19.5 10.5 19.5H13.5C13.6989 19.5 13.8897 19.421 14.0303 19.2803C14.171 19.1397 14.25 18.9489 14.25 18.75C14.25 18.5511 14.171 18.3603 14.0303 18.2197C13.8897 18.079 13.6989 18 13.5 18H10.5ZM8.625 1.5C7.92881 1.5 7.26113 1.77656 6.76884 2.26884C6.27656 2.76113 6 3.42881 6 4.125V19.875C6 21.324 7.176 22.5 8.625 22.5H15.375C16.0712 22.5 16.7389 22.2234 17.2312 21.7312C17.7234 21.2389 18 20.5712 18 19.875V4.125C18 3.42881 17.7234 2.76113 17.2312 2.26884C16.7389 1.77656 16.0712 1.5 15.375 1.5H8.625ZM7.5 4.125C7.5 3.82663 7.61853 3.54048 7.8295 3.3295C8.04048 3.11853 8.32663 3 8.625 3H15.375C15.6734 3 15.9595 3.11853 16.1705 3.3295C16.3815 3.54048 16.5 3.82663 16.5 4.125V19.875C16.5 20.1734 16.3815 20.4595 16.1705 20.6705C15.9595 20.8815 15.6734 21 15.375 21H8.625C8.32663 21 8.04048 20.8815 7.8295 20.6705C7.61853 20.4595 7.5 20.1734 7.5 19.875V4.125Z"
+                  fill="url(#paint0_linear_43_376)"
+                />
+                <defs>
+                  <linearGradient
+                    id="paint0_linear_43_376"
+                    x1="12.0482"
+                    y1="-7.00508"
+                    x2="12.0482"
+                    y2="30.0305"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#00D4E4" />
+                    <stop offset="0.78125" stop-color="#1F59EE" />
+                  </linearGradient>
+                </defs>
+              </svg>
+              +370 61234567</span
+            >
+          </div>
+          <div class="category-box">
+            <span class="prop">Elektroninis paštas:</span>
+            <span class="value">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M3 9.057V16.5C3 17.2956 3.31607 18.0587 3.87868 18.6213C4.44129 19.1839 5.20435 19.5 6 19.5H18C18.7956 19.5 19.5587 19.1839 20.1213 18.6213C20.6839 18.0587 21 17.2956 21 16.5V7.5C21 6.70435 20.6839 5.94129 20.1213 5.37868C19.5587 4.81607 18.7956 4.5 18 4.5H6C5.20435 4.5 4.44129 4.81607 3.87868 5.37868C3.31607 5.94129 3 6.70435 3 7.5V9.057ZM6 6H18C18.3978 6 18.7794 6.15804 19.0607 6.43934C19.342 6.72064 19.5 7.10218 19.5 7.5V8.61L12 12.648L4.5 8.61V7.5C4.5 7.10218 4.65804 6.72064 4.93934 6.43934C5.22064 6.15804 5.60218 6 6 6ZM4.5 10.314L11.6445 14.16C11.7538 14.2188 11.8759 14.2496 12 14.2496C12.1241 14.2496 12.2462 14.2188 12.3555 14.16L19.5 10.314V16.5C19.5 16.8978 19.342 17.2794 19.0607 17.5607C18.7794 17.842 18.3978 18 18 18H6C5.60218 18 5.22064 17.842 4.93934 17.5607C4.65804 17.2794 4.5 16.8978 4.5 16.5V10.314Z"
+                  fill="url(#paint0_linear_43_381)"
+                />
+                <defs>
+                  <linearGradient
+                    id="paint0_linear_43_381"
+                    x1="12.0723"
+                    y1="-1.57506"
+                    x2="12.0723"
+                    y2="24.8789"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#00D4E4" />
+                    <stop offset="0.78125" stop-color="#1F59EE" />
+                  </linearGradient>
+                </defs>
+              </svg>
+              info@keliaukkartu.lt</span
+            >
+          </div>
+          <div class="category-box">
+            <span class="prop">Įmonės adresas:</span>
+            <span class="value">
+              <svg
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M15 10.5C15 11.2956 14.6839 12.0587 14.1213 12.6213C13.5587 13.1839 12.7956 13.5 12 13.5C11.2044 13.5 10.4413 13.1839 9.87868 12.6213C9.31607 12.0587 9 11.2956 9 10.5C9 9.70435 9.31607 8.94129 9.87868 8.37868C10.4413 7.81607 11.2044 7.5 12 7.5C12.7956 7.5 13.5587 7.81607 14.1213 8.37868C14.6839 8.94129 15 9.70435 15 10.5V10.5Z"
+                  stroke="url(#paint0_linear_43_383)"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M19.5 10.5C19.5 17.642 12 21.75 12 21.75C12 21.75 4.5 17.642 4.5 10.5C4.5 8.51088 5.29018 6.60322 6.6967 5.1967C8.10322 3.79018 10.0109 3 12 3C13.9891 3 15.8968 3.79018 17.3033 5.1967C18.7098 6.60322 19.5 8.51088 19.5 10.5V10.5Z"
+                  stroke="url(#paint1_linear_43_383)"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <defs>
+                  <linearGradient
+                    id="paint0_linear_43_383"
+                    x1="12.0241"
+                    y1="5.06998"
+                    x2="12.0241"
+                    y2="15.6516"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#00D4E4" />
+                    <stop offset="0.78125" stop-color="#1F59EE" />
+                  </linearGradient>
+                  <linearGradient
+                    id="paint1_linear_43_383"
+                    x1="12.0602"
+                    y1="-4.59382"
+                    x2="12.0602"
+                    y2="28.4736"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop stop-color="#00D4E4" />
+                    <stop offset="0.78125" stop-color="#1F59EE" />
+                  </linearGradient>
+                </defs>
+              </svg>
+              Girininkų g. 58, Linkuva,<br />
+              Pakruojo r., LT-45964,<br />
+              Lietuva</span
+            >
+          </div>
+        </div>
+        <div class="rekvizitai">
+          <h2>Rekvizitai</h2>
+          <div class="category-box">
+            <span class="prop">Įmonės pavadinimas:</span>
+            <span class="value">UAB "Keliauk kartu"</span>
+          </div>
+          <div class="category-box">
+            <span class="prop">Įmonės kodas:</span>
+            <span class="value">300000001</span>
+          </div>
+          <div class="category-box">
+            <span class="prop">PVM mokėtojo kodas:</span>
+            <span class="value">LT115252622541</span>
+          </div>
+        </div>
+        <div class="map"></div>
+      </div>
+      <div class="forma">
+        <h2>Parašykite mums</h2>
+        <label for="name">Vardas</label>
+        <input type="text" name="name" />
+        <label for="phone">Telefono Nr.</label>
+        <input type="tel" name="phone" />
+        <label for="mail">El. paštas</label>
+        <input type="email" name="mail" />
+        <label for="t-a">Žinutė</label>
+        <textarea name="t-a"></textarea>
+        <button>Siųsti</button>
+      </div>
+    </main>
+
     <footer>
       <div class="footer_top">
         <div class="footer_top_left">
